<resources>
    <string name="app_name">EcoScan</string>
    <string name="welcome">Welcome!</string>
    <string name="layout_image">Layout Image</string>
    <string name="scan_button">Scan Button</string>
    <string name="upload_image">Upload</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="image_preview">Image Preview</string>
    <string name="cancel_button">Cancel</string>
    <string name="accept_button">Accept</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="back">Back</string>
    <string name="take_photo_button">Take Photo</string>
    <string name="switch_camera_button">Switch Camera</string>
    <string name="failed_open_camera">Failed to Open Camera</string>
    <string name="recommendation">Recommendation</string>
    <string name="success">Success</string>
    <string name="error_take_photo">Error to Take Photo</string>
    <string name="didnt_get_permission">Didn\'t Get Camera Permission</string>
    <string name="cancel_camera">Cancel Camera</string>
    <string name="question_first_dropdown">Location of Item at Home ?</string>
    <string name="first_dropdown">Dropdown for Location of Item at Home</string>
    <string name="question_second_dropdown">Item Name ?</string>
    <string name="second_dropdown">Dropdown for Item Name</string>
    <string name="question_third_dropdown">Item Type ?</string>
    <string name="third_dropdown">Dropdown for Item Type</string>
    <string name="submit">SUBMIT</string>
    <string name="power_consumption">Power Consumption</string>
    <string name="production_impact">Production Impact</string>
    <string name="disposal_impact">Disposal Impact</string>
    <string name="consumption_impact">Consumption Impact</string>
    <string name="watt">watt</string>
    <string name="more_button">GET MORE INFO AND ALTERNATIVE</string>
    <string name="about_us">About Us</string>
    <string name="about_us_text">Zenith is the name of a group of students from various universities in Indonesia who care and want to contribute to protecting the environment. Zenith itself means the peak, which shows our ambition and passion in making an impact.</string>
    <string name="our_mission">Our Mission</string>
    <string name="our_mission_text_one">EcoScan was created to help ordinary people, YES, you, easily understand the environmental impact of various household electronic equipment you own. It provides information not only about the energy consumed but also about the production, consumption, and disposal impact of these devices.</string>
    <string name="our_mission_text_two">Certainly, it is important for each of us to contribute to environmental conservation, including making decisions that have the best impact on our environment.</string>
    <string name="our_method">Our Methode</string>
    <string name="our_method_text">EcoScan works by assisting you in scanning your electronic equipment and instantly providing you with detailed information about the product category and its environmental impact.</string>
    <string name="advantages">Advantages</string>
    <string name="advantages_text_one">1. Instant results! No need to wait long or search for articles on the internet.</string>
    <string name="advantages_text_two">2. Online! Our data for an electronic device is not stored on your device, saving storage space!</string>
    <string name="advantages_text_three">3. Data sourced from Real Research! Not from unreliable articles or blogs, we gather data from Research Datasets and research findings.</string>
    <string name="our_team">Our Team</string>
    <string name="no_data_history">No Data History</string>
    <string name="alternative">Alternative</string>
    <string name="wana">Wana</string>
    <string name="rezha">Rezha</string>
    <string name="putra">Putra</string>
    <string name="azilla">Azilla</string>
    <string name="iqbal">Iqbal</string>
    <string name="afdan">Afdan</string>
    <string name="machine_learning">Machine Learning</string>
    <string name="cloud_computing">Cloud Computing</string>
    <string name="mobile_development">Mobile Development</string>
    <string name="error">Error</string>
    <string name="energy_form">Energy Usage: %s kWh</string>
    <string name="item_name">%s%%</string>
</resources>