<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".presentation.screen.FormFragment">

    <ImageView
        android:id="@+id/iv_form_image"
        android:layout_width="200dp"
        android:layout_height="185dp"
        android:contentDescription="@string/layout_image"
        android:src="@drawable/form_img"
        android:layout_marginTop="24dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_firstDropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_first_dropdown"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/iv_form_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/firstDropdown"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/spinner_bg"
        android:spinnerMode="dropdown"
        android:popupBackground="@color/white"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/first_dropdown"
        app:layout_constraintTop_toBottomOf="@id/tv_firstDropdown" />

    <TextView
        android:id="@+id/tv_secondDropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_second_dropdown"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/firstDropdown"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/secondDropdown"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/spinner_bg"
        android:spinnerMode="dropdown"
        android:popupBackground="@color/white"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/second_dropdown"
        app:layout_constraintTop_toBottomOf="@id/tv_secondDropdown" />

    <TextView
        android:id="@+id/tv_thirdDropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_third_dropdown"
        android:textSize="14sp"
        android:textColor="?attr/colorOnPrimary"
        android:fontFamily="@font/poppins"
        android:layout_marginStart="30dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/secondDropdown"
        app:layout_constraintStart_toStartOf="parent"/>

    <Spinner
        android:id="@+id/thirdDropdown"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/spinner_bg"
        android:spinnerMode="dropdown"
        android:popupBackground="@color/white"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/third_dropdown"
        app:layout_constraintTop_toBottomOf="@id/tv_thirdDropdown" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitButton"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginBottom="92dp"
        android:text="@string/submit"
        android:alpha="0"
        android:textSize="16sp"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/poppins_font"
        android:background="@drawable/button_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tv_energy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/energy_form"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/thirdDropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submitButton"/>

    <FrameLayout
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:elevation="10dp"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="?attr/colorOnPrimary"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>