<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".presentation.screen.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="19dp"
        android:paddingEnd="24dp"
        android:paddingBottom="74dp">

        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/about_us"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintOverlap" />

        <TextView
            android:id="@+id/tv_about_us_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/about_us_text"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about_us"
            tools:ignore="VisualLintOverlap,VisualLintLongText" />

        <TextView
            android:id="@+id/tv_our_mission"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/our_mission"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_about_us_text" />

        <TextView
            android:id="@+id/tv_our_mission_text_one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/our_mission_text_one"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_our_mission"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/tv_our_mission_text_two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/our_mission_text_two"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_our_mission_text_one"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/tv_our_method"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/our_method"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_our_mission_text_two" />

        <TextView
            android:id="@+id/tv_our_method_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/our_method_text"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_our_method"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/tv_advantages"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/advantages"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_our_method_text" />

        <TextView
            android:id="@+id/tv_advantages_text_one"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/advantages_text_one"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_advantages"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/tv_advantages_text_two"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/advantages_text_two"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_advantages_text_one"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/tv_advantages_text_three"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/advantages_text_three"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="12sp"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_advantages_text_two"
            tools:ignore="VisualLintLongText" />

        <TextView
            android:id="@+id/tv_our_team"
            android:layout_width="81dp"
            android:layout_height="26dp"
            android:layout_marginTop="17dp"
            android:fontFamily="@font/poppins_font"
            android:text="@string/our_team"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_advantages_text_three"
            tools:ignore="TextSizeCheck" />
        
        <androidx.cardview.widget.CardView
            android:id="@+id/profile_wana"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_our_team"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/grey">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/profile_wana"
                    android:contentDescription="@string/wana"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/wana"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/machine_learning"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_rezha"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/profile_wana"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/grey">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/profile_rezha"
                    android:contentDescription="@string/rezha"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/rezha"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/cloud_computing"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_putra"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/profile_rezha"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/grey">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/profile_putra"
                    android:contentDescription="@string/putra"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/putra"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/mobile_development"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_azilla"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@id/tv_our_team"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/grey">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/profile_azilla"
                    android:contentDescription="@string/azilla"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/azilla"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/machine_learning"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_iqbal"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/profile_wana"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/grey">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/profile_iqbal"
                    android:contentDescription="@string/iqbal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/iqbal"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/machine_learning"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_afdan"
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/profile_iqbal"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/grey">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="97dp"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/profile_afdan"
                    android:contentDescription="@string/afdan"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/afdan"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="8sp"
                    android:fontFamily="@font/poppins_font"
                    android:text="@string/cloud_computing"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    tools:ignore="SmallSp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>