<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.CameraFragment">

    <androidx.camera.view.PreviewView
        android:id="@+id/camera_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-51dp"
        tools:layout_editor_absoluteY="-75dp" />

    <ImageView
        android:id="@+id/btn_take_photo"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/take_photo_button"
        android:src="@drawable/ic_take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btn_switch_camera"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/switch_camera_button"
        android:src="@drawable/ic_switch_camera"
        app:layout_constraintBottom_toBottomOf="@id/btn_take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_take_photo"
        app:layout_constraintStart_toEndOf="@+id/btn_take_photo" />

    <ImageView
        android:id="@+id/btn_cancel"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/cancel_camera"
        android:src="@drawable/ic_cancel_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>