<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.HomeFragment"
    android:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_font"
        android:text="@string/welcome"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_home_image"
        android:layout_width="300dp"
        android:layout_height="248dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/home_img"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        android:contentDescription="@string/layout_image" />

    <androidx.cardview.widget.CardView
        android:id="@+id/scan_button"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="42dp"
        android:alpha="0"
        app:cardBackgroundColor="@color/marine_blue"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/upload_button"
        app:layout_constraintTop_toBottomOf="@+id/iv_home_image"
        tools:alpha="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:text="@string/scan"
                android:gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_font"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                app:drawableTopCompat="@drawable/ic_button_scan" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/upload_button"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="42dp"
        android:alpha="0"
        app:cardBackgroundColor="@color/marine_blue"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toEndOf="@id/scan_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_home_image"
        tools:alpha="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_image"
                android:fontFamily="@font/poppins_font"
                android:textStyle="bold"
                android:drawablePadding="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                app:drawableTopCompat="@drawable/ic_upload_image" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>